client/src/styles/tailwind-base-theme.css
@custom-variant dark (&:where(.dark, .dark *));

@custom-variant small-screen (@media (height < 600px) or (width < 768px));
@custom-variant big-screen (@media (height >= 600px) and (width >= 768px));

@theme {
  --font-sans: InterVariable, sans-serif;
  --font-sans--font-feature-settings: "cv02", "cv03", "cv04", "cv11";

  --color-default-text: #000;
  --color-scrollbar: #ffffff85;
  --color-default-background: #fff;
  --color-primary: #ad8ce5;
  --color-primary-dark: #a577e3;
  --color-secondary: #c7c7c7;
  --color-accent: #6f97bc;

  --animate-background-shift: background-shift 40s ease infinite;

  --text-shadow-glow: 0px 0px 4px var(--tw-text-shadow-color, rgb(0 0 0 / 0.1)),
    0px 0px 6px var(--tw-text-shadow-color, rgb(0 0 0 / 0.1)),
    0px 0px 10px var(--tw-text-shadow-color, rgb(0 0 0 / 0.1));

  @keyframes background-shift {
    0%,
    100% {
      background-position: 70% 50%;
    }

    25% {
      background-position: 25% 50%;
    }

    50% {
      background-position: 100% 100%;
    }

    75% {
      background-position: 70% 100%;
    }
  }
}

@layer base {
  * {
    @variant dark {
      --color-default-text: #eee;
      --color-default-background: #000;
      --color-primary: #a577e3;
      --color-primary-dark: #5d4995;
      --color-secondary: #868686;
      --color-accent: #3a595f;
    }
  }

  html {
    scrollbar-color: var(--color-scrollbar) var(--color-accent);

    &.dark {
      scrollbar-color: var(--color-scrollbar) var(--color-primary-dark);
    }

    @apply small-screen:overflow-visible big-screen:overflow-hidden small-screen:scroll-smooth bg-accent small-screen:stable-scrollbar;
  }

  body {
    scrollbar-color: var(--color-scrollbar) transparent;

    @apply big-screen:h-dvh big-screen:w-dvw big-screen:overflow-auto big-screen:stable-scrollbar;
    @apply scroll-smooth text-default-text;

    * {
      @apply transition-colors;
    }
  }
}

